# photon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: camera.h  core.h  image.h  integrator.h  json.h  light.h  material.h  photon_map.h  primitive.h  sampler.h  scene.h  texture.h  triangle.h
input/: parameters.json  randomCornellBox.mtl  untitled.mtl
models/: CornellBox.mtl  CornellBox_random.mtl  CornellBox_water.mtl
output/: output.ppm
src/: camera.cpp  image.cpp  triangle.cpp
